created tangiers lounge project page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body>
-    <main>
-      <h1>Portfolio</h1>
-      <p>Coming soon.</p>
-    </main>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+  <main>
+    <h1>Portfolio</h1>
+    <ul>
+      <li><a href="projects/tangiers-lounge-logo/index.html">Tangiers Lounge Logo (Иллюстрация — знак для ресторана)</a>
+      </li>
+    </ul>
+  </main>
+</body>
+
 </html>
