Add non-breaking spaces for better typography

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8" />
@@ -12,7 +12,8 @@
   <main>
     <h1>Portfolio</h1>
     <ul>
-      <li><a href="projects/tangiers-lounge-logo/index.html">Tangiers Lounge Logo (Иллюстрация — знак для ресторана)</a>
+      <li><a href="projects/tangiers-lounge-logo/index.html">Tangiers Lounge Logo (Иллюстрация&nbsp;— знак
+          для&nbsp;ресторана)</a>
       </li>
     </ul>
   </main>
