--- a/projects/tangiers-lounge-logo/index.html
+++ b/projects/tangiers-lounge-logo/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Иллюстрация — знак для ресторана — 2025</title>
+    <title>Иллюстрация&nbsp;— знак для&nbsp;ресторана&nbsp;— 2025</title>
     <link rel="stylesheet" href="../../css/styles.css" />
 </head>
 
 <body>
     <header>
         <nav aria-label="Навигация">
-            <a href="../../index.html" rel="prev">← Назад</a>
+            <a href="../../index.html" rel="prev">←&nbsp;Назад</a>
         </nav>
 
         <div>
-            <h1>Иллюстрация — знак<br />для ресторана</h1>
+            <h1>Иллюстрация&nbsp;— знак<br />для&nbsp;ресторана</h1>
             <p>2025</p>
         </div>
     </header>
@@ -23,21 +23,22 @@
     <main>
         <figure>
             <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-1.png"
-                alt="Знак Tangiers Lounge на латунной пластине" />
+                alt="Знак Tangiers Lounge на&nbsp;латунной пластине" />
         </figure>
 
         <p>
-            Знак-печать для декора, полиграфии и веб макетов для ресторана в стиле масонской ложи. Должен был сочетать
-            масонскую символику и логотип ресторана. Выбрали циркуль с угольником, в оригинальном символе в центре буква
-            «G», вначале попробовали заменить её на символ ресторана.
+            Знак-печать для&nbsp;декора, полиграфии и&nbsp;веб макетов для&nbsp;ресторана в&nbsp;стиле масонской ложи.
+            Должен был сочетать масонскую символику и&nbsp;логотип ресторана. Выбрали циркуль с&nbsp;угольником,
+            в&nbsp;оригинальном символе в&nbsp;центре буква «G», вначале попробовали заменить её&nbsp;на&nbsp;символ
+            ресторана.
         </p>
 
         <section>
             <h2>Разработка вариаций</h2>
 
             <p>
-                Я рисовала разные варианты, для наброска использовала Procreate, а для чистового рисунка в векторе —
-                Illustrator.
+                Я&nbsp;рисовала разные варианты, для&nbsp;наброска использовала Procreate, а&nbsp;для чистового
+                рисунка в&nbsp;векторе&nbsp;— Illustrator.
             </p>
 
             <figure>
@@ -47,20 +48,21 @@
 
         <section>
             <figure>
-                <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-3.png" alt="Вариации с буквой T" />
+                <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-3.png" alt="Вариации с&nbsp;буквой T" />
             </figure>
             <figure>
                 <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-4.png" alt="Орнаментальные вариации" />
             </figure>
             <figure>
-                <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-6.png" alt="Вариации с буквой G" />
+                <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-6.png" alt="Вариации с&nbsp;буквой G" />
             </figure>
         </section>
 
         <section>
             <p>
-                Очень много детализации и тонких линий на трафарете, как на фото выше, поэтому в макете важно было это
-                учесть. В итоге для логотипа сократили кол-во элементов и сохранили центровку.
+                Очень много детализации и&nbsp;тонких линий на&nbsp;трафарете, как&nbsp;на&nbsp;фото выше,
+                поэтому в&nbsp;макете важно было это учесть. В&nbsp;итоге для&nbsp;логотипа сократили
+                кол-во элементов и&nbsp;сохранили центровку.
             </p>
 
             <figure>
@@ -81,7 +83,7 @@
     </main>
 
     <footer>
-        <small>© Марта Шпигельман</small>
+        <small>©&nbsp;Марта Шпигельман</small>
     </footer>
 </body>
 
