--- a/template.html
+++ b/template.html
@@ -1,53 +1,54 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Верстка обложек для издательства — 2025</title>
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
 
-  <body>
-    <header>
-      <nav aria-label="Навигация">
-        <a href="../" rel="prev">← Назад</a>
-      </nav>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Верстка обложек для издательства — 2025</title>
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
 
-      <div>
-        <h1>Верстка обложек<br />для издательства</h1>
-        <p>2025</p>
-      </div>
-    </header>
+<body>
+  <header>
+    <nav aria-label="Навигация">
+      <a href="../" rel="prev">←&nbsp;Назад</a>
+    </nav>
 
-    <main>
-      <figure>
-        <img src="images/cover-hero.jpg" alt="Обложки для издательства — превью" />
-      </figure>
+    <div>
+      <h1>Верстка обложек<br />для&nbsp;издательства</h1>
+      <p>2025</p>
+    </div>
+  </header>
+
+  <main>
+    <figure>
+      <img src="images/cover-hero.jpg" alt="Обложки для&nbsp;издательства&nbsp;— превью" />
+    </figure>
+
+    <p>
+      Три обложки&nbsp;— построение бизнеса, методы маркетинга и&nbsp;психологический
+      взгляд на&nbsp;личный опыт. У&nbsp;всех авторов были разные ограничения и&nbsp;папапапапам
+    </p>
+
+    <section>
+      <h2>Бизнес в диалоге</h2>
 
       <p>
-        Три обложки — построение бизнеса, методы маркетинга и психологический
-        взгляд на личный опыт. У всех авторов были разные ограничения и
-        папапапапам
+        Первый референс от&nbsp;автора был с&nbsp;шахматной фигурой, это связано с&nbsp;метафорой
+        построения бизнеса как&nbsp;игры. И&nbsp;обязательно просили добавить портрет
+        автора. Я&nbsp;сделала вариант с&nbsp;шахматной доской, портрет добавила внутрь
+        рисунка.
       </p>
 
-      <section>
-        <h2>Бизнес в диалоге</h2>
+      <figure>
+        <img src="images/cover-1.jpg" alt="Обложка «Бизнес в&nbsp;диалоге»" />
+      </figure>
+    </section>
+  </main>
 
-        <p>
-          Первый референс от автора был с шахматной фигурой, это связано с
-          метафорой построения бизнеса как игры. И обязательно просили добавить
-          портрет автора. Я сделала вариант с шахматной доской, портрет добавила
-          внутрь рисунка.
-        </p>
+  <footer>
+    <small>©&nbsp;Имя Фамилия</small>
+  </footer>
+</body>
 
-        <figure>
-          <img src="images/cover-1.jpg" alt="Обложка «Бизнес в диалоге»" />
-        </figure>
-      </section>
-    </main>
-
-    <footer>
-      <small>© Имя Фамилия</small>
-    </footer>
-  </body>
 </html>
