--- a/projects/tangiers-lounge-logo/index.html
+++ b/projects/tangiers-lounge-logo/index.html
@@ -21,17 +21,20 @@
     </header>
 
     <main>
-        <figure>
-            <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-1.png"
-                alt="Знак Tangiers Lounge на&nbsp;латунной пластине" />
-        </figure>
+        <section>
+            <figure>
+                <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-1.png"
+                    alt="Знак Tangiers Lounge на&nbsp;латунной пластине" />
+            </figure>
 
-        <p>
-            Знак-печать для&nbsp;декора, полиграфии и&nbsp;веб макетов для&nbsp;ресторана в&nbsp;стиле масонской ложи.
-            Должен был сочетать масонскую символику и&nbsp;логотип ресторана. Выбрали циркуль с&nbsp;угольником,
-            в&nbsp;оригинальном символе в&nbsp;центре буква «G», вначале попробовали заменить её&nbsp;на&nbsp;символ
-            ресторана.
-        </p>
+            <p>
+                Знак-печать для&nbsp;декора, полиграфии и&nbsp;веб макетов для&nbsp;ресторана в&nbsp;стиле масонской
+                ложи.
+                Должен был сочетать масонскую символику и&nbsp;логотип ресторана. Выбрали циркуль с&nbsp;угольником,
+                в&nbsp;оригинальном символе в&nbsp;центре буква «G», вначале попробовали заменить её&nbsp;на&nbsp;символ
+                ресторана.
+            </p>
+        </section>
 
         <section>
             <h2>Разработка вариаций</h2>
@@ -44,9 +47,7 @@
             <figure>
                 <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-2.png" alt="Вариации логотипа" />
             </figure>
-        </section>
 
-        <section>
             <figure>
                 <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-3.png" alt="Вариации с&nbsp;буквой T" />
             </figure>
@@ -56,9 +57,7 @@
             <figure>
                 <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-6.png" alt="Вариации с&nbsp;буквой G" />
             </figure>
-        </section>
 
-        <section>
             <p>
                 Очень много детализации и&nbsp;тонких линий на&nbsp;трафарете, как&nbsp;на&nbsp;фото выше,
                 поэтому в&nbsp;макете важно было это учесть. В&nbsp;итоге для&nbsp;логотипа сократили
@@ -69,9 +68,7 @@
                 <img src="../../img/tangiers-lounge-logo/tangiers-lounge-symbol-5.png"
                     alt="Геометрическое построение знака" />
             </figure>
-        </section>
 
-        <section>
             <p>
                 Этот вариант стал финальным.
             </p>
