feat: add 3-books project to portfolio, including its dedicated page, associated PDF, hero image, and main index update.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <main>
     <h1>Portfolio</h1>
     <ul>
+      <li><a href="projects/3-books/index.html">Верстка обложек для&nbsp;издательства</a></li>
       <li><a href="projects/tangiers-lounge-logo/index.html">Tangiers Lounge Logo (Иллюстрация&nbsp;— знак
           для&nbsp;ресторана)</a>
       </li>
